Remove the side overflow bug

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -38,6 +38,7 @@ body {
     opacity: 0.6;
     position: sticky;
     top: 0;
+    overflow: hidden;
 }
 
 .tab {
